--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -12,17 +12,17 @@ shadow-exclude = [
 #           Fading              #
 #################################
 fading = true
-fade-delta = 20
-fade-out-step = 0.10
-fade-in-step = 0.10
+fade-delta = 80
+fade-out-step = 0.9
+fade-in-step = 0.9
 
 
 #################################
 #   Transparency / Opacity      #
 #################################
-inactive-opacity = 1.0;
-frame-opacity = 1.0;
-inactive-opacity-override = false;
+inactive-opacity = 1;
+frame-opacity = 1;
+inactive-opacity-override = true;
 opacity-rule = [
       "100:name = 'Picture in picture'",
       "100:class_g = 'jetbrains-clion'",
@@ -34,10 +34,16 @@ opacity-rule = [
 #################################
 #           Corners             #
 #################################
-corner-radius = 0
+corner-radius = 0 
+round-borders = 0;
 
 rounded-corners-exclude = [
+  "class_g = 'Polybar'",
   "class_g = 'Rofi'",
+  "window_type = 'menu'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'popup_menu'",
+  "window_type = 'tooltip'",
   "window_type = 'notification'",
   "window_type = 'dock'",
   "window_type = 'desktop'",
