--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -38,9 +38,11 @@ foreground = ${colors.foreground}
 
 line-size = 2pt
 
-border-size = 0pt
+; border-size = 10pt
 border-color = #00000000
-; border-bottom-size = 4pt 
+; border-top-size = 5pt 
+; border-left-size = 5pt 
+; border-right-size = 5pt 
 
 padding-left = 0
 padding-right = 1
@@ -50,10 +52,10 @@ module-margin = 1
 separator = ""
 separator-foreground = ${colors.disabled}
 
-font-0 = JetBrainsMono Nerd Font Mono;2
+font-0 = IosevkaTerm Nerd Font Mono;1
 
 modules-left = xworkspaces
-modules-right = polypomo btc redshift vpn pulseaudio output memory cpu date poweroff
+modules-right = polypomo btc redshift vpn pulseaudio output memory cpu date systray poweroff 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
