--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -55,7 +55,7 @@ separator-foreground = ${colors.disabled}
 font-0 = IosevkaTerm Nerd Font Mono;1
 
 modules-left = xworkspaces
-modules-right = polypomo btc redshift vpn pulseaudio output memory cpu date systray poweroff 
+modules-right = polypomo eth btc redshift vpn pulseaudio output memory cpu date systray poweroff 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -205,9 +205,17 @@ scroll-up = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polyba
 scroll-down = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polybar/scripts/redshift/redshift.sh decrease
 interval=0.5
 
+[module/eth]
+type = custom/script
+format-prefix = "󰡪 "  
+format-prefix-foreground = ${colors.primary}
+exec = ~/.config/polybar/scripts/btc.sh eth
+click-right = /usr/bin/google-chrome-stable https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3AETHUSD
+interval=10
+
 [module/btc]
 type = custom/script
-format-prefix = " "  
+format-prefix = "󰆬 "  
 format-prefix-foreground = ${colors.primary}
 exec = ~/.config/polybar/scripts/btc.sh btc
 click-right = /usr/bin/google-chrome-stable https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3ABTCUSD
