--- a/.config/i3/config
+++ b/.config/i3/config
@@ -193,8 +193,8 @@ exec $psst /usr/lib/pam_kwallet_init
 exec $psst  dex --autostart --environment i3
 exec $psst  xss-lock --transfer-sleep-lock -- i3lock --nofork
 # exec $psst  feh --recursive --bg-fill --randomize $HOME/Pictures/Wallpapers/ 
-# exec $psst  feh --bg-fill $HOME/Pictures/Wallpapers/anime-gruv-light.png
-exec $psst xsetroot -solid "#000000"
+exec $psst  feh --bg-center $HOME/Pictures/Wallpapers/2-cor-12-9.png
+# exec $psst xsetroot -solid "#000000"
 exec_always $psst /usr/lib/polkit-kde-authentication-agent-1
 exec_always $psst autotiling
 exec_always $psst picom
@@ -349,11 +349,11 @@ mode "$mode_redshift" {
 
 # Black
 # client.focused          #000000  #000000  #FFFFFF  #FFFFFF  #000000
-client.focused          #0b0b0b  #0b0b0b  #bfa200  #bfa200  #0b0b0b
-client.focused_inactive #1f1f1f  #1f1f1f  #adadad  #222222
-client.unfocused        #2e2e2e  #2e2e2e  #414141  #292D2E  #2e2e2e
-client.urgent           #AA3941  #AA3941  #FFFFFF  #AA3941  #AA3941
-client.placeholder      #0C0C0C  #0C0C0C  #FFFFFF  #000000  #0C0C0C
+# client.focused          #0b0b0b  #0b0b0b  #bfa200  #bfa200  #0b0b0b
+# client.focused_inactive #1f1f1f  #1f1f1f  #adadad  #222222
+# client.unfocused        #2e2e2e  #2e2e2e  #414141  #292D2E  #2e2e2e
+# client.urgent           #AA3941  #AA3941  #FFFFFF  #AA3941  #AA3941
+# client.placeholder      #0C0C0C  #0C0C0C  #FFFFFF  #000000  #0C0C0C
 
 # Cyan
 # client.focused          #4C7899 #4C7899 #FFFFFF #ffffff   #4C7899
@@ -365,11 +365,11 @@ client.placeholder      #0C0C0C  #0C0C0C  #FFFFFF  #000000  #0C0C0C
 # client.focused          #ffa202 #cb6d02 #FFFFFF #4C7899   #ffa202
 
 # Orange
-# client.focused          #ad3c03 #ad3c03 #ffffff #b8bb26   #ad3c03
-# client.focused_inactive #222222 #222222 #414141 #292D2E   #222222
-# client.unfocused        #222222 #222222 #414141 #292D2E   #222222
-# client.urgent           #AA3941 #AA3941 #FFFFFF #AA3941   #AA3941
-# client.placeholder      #0C0C0C #0C0C0C #FFFFFF #000000   #0C0C0C
+client.focused          #ad3c03 #ad3c03 #ffffff #b8bb26   #ad3c03
+client.focused_inactive #222222 #222222 #414141 #292D2E   #222222
+client.unfocused        #222222 #222222 #414141 #292D2E   #222222
+client.urgent           #AA3941 #AA3941 #FFFFFF #AA3941   #AA3941
+client.placeholder      #0C0C0C #0C0C0C #FFFFFF #000000   #0C0C0C
 
 # VSCode
 # client.focused           #1360A5 #1360A5 #ffffff #2e9ef4 #1360A5
