--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,5 @@
-import = [
-    "~/.config/alacritty/themes/themes/gruvbox_dark.toml"
-]
+[general]
+import = [ "~/.config/alacritty/themes/theme-dark.toml" ]
 
 [colors]
 draw_bold_text_with_bright_colors = true
@@ -9,23 +8,27 @@ draw_bold_text_with_bright_colors = true
 TERM = "xterm-256color"
 
 [font]
-size = 12
+size = 16
 
 [font.bold]
-family = "IosevkaTerm Nerd Font"
+family = "JetBrainsMono Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "IosevkaTerm Nerd Font"
+family = "JetBrainsMono Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "IosevkaTerm Nerd Font"
+family = "JetBrainsMono Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "IosevkaTerm Nerd Font"
-style = "Regular"
+family = "JetBrainsMono Nerd Font"
+
+[[keyboard.bindings]] 
+key = "F6"
+mods = "Shift"
+command = { program = "/usr/local/bin/toggle-alacritty-theme" }
 
 [[keyboard.bindings]]
 action = "Paste"
@@ -70,6 +73,7 @@ key = "End"
 mode = "~Alt"
 mods = "Shift"
 
+
 [[mouse.bindings]]
 action = "PasteSelection"
 mouse = "Middle"
@@ -78,9 +82,10 @@ mouse = "Middle"
 history = 10000
 multiplier = 3
 
-[shell]
+[terminal.shell]
 args = ["--login"]
 program = "/bin/zsh"
+
 
 [window]
 decorations = "full"
@@ -88,3 +93,6 @@ dynamic_padding = true
 
 [window.class]
 instance = "Alacritty"
+
+[terminal]
+
