Ativa o passthrough no tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 #-------------------------------------------------------#
 # Global Settings
 #-------------------------------------------------------#
+set -g allow-passthrough on
 set -g mouse on
 unbind C-b
 set -g prefix C-a
