--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -27,7 +27,7 @@ disabled = #707880
 
 [bar/i3]
 width = 100%
-height = 20pt
+height = 16pt
 radius = 0
 bottom = false
 
@@ -52,10 +52,11 @@ module-margin = 1
 separator = ""
 separator-foreground = ${colors.disabled}
 
-font-0 = IosevkaTerm Nerd Font Mono;1
+; font-0 = IosevkaTerm Nerd Font Mono;1
+font-0 = JetBrains Mono Nerd Font;1
 
 modules-left = xworkspaces
-modules-right = polypomo eth btc redshift vpn pulseaudio output memory cpu date systray poweroff 
+modules-right = eth btc redshift vpn pulseaudio memory cpu date systray poweroff 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -120,8 +121,8 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = " "
-format-volume-prefix-foreground = ${colors.primary}
+format-volume-prefix = "  "
+; format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
@@ -147,15 +148,15 @@ interval=0.5
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "󰍛 "
-format-prefix-foreground = ${colors.primary}
+format-prefix = "  "
+; format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "󰻠 "
-format-prefix-foreground = ${colors.primary}
+format-prefix = " "
+; format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
 [network-base]
@@ -177,7 +178,7 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
 [module/date]
 format-prefix = "󱛡 "
-format-prefix-foreground = ${colors.primary}
+; format-prefix-foreground = ${colors.primary}
 type = internal/date
 interval = 1
 
@@ -188,17 +189,17 @@ label = %date%
 
 [module/vpn]
 format-prefix = "󰒃 "
-format-prefix-foreground = ${colors.primary}
+; format-prefix-foreground = ${colors.primary}
 type = custom/script
 exec = ~/.config/polybar/scripts/vpnstatus.sh
 click-right = nmcli c down Mutant
-click-left = konsole -e "nmcli c up Mutant --ask"
+click-left = alacritty -e nmcli c up Mutant --ask
 interval = 5
 
 [module/redshift]
 type = custom/script
 format-prefix = "󰥟 "  
-format-prefix-foreground = ${colors.primary}
+; format-prefix-foreground = ${colors.primary}
 exec = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polybar/scripts/redshift/redshift.sh temperature 
 click-left = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polybar/scripts/redshift/redshift.sh toggle 
 scroll-up = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polybar/scripts/redshift/redshift.sh increase
@@ -208,7 +209,7 @@ interval=0.5
 [module/eth]
 type = custom/script
 format-prefix = "󰡪 "  
-format-prefix-foreground = ${colors.primary}
+; format-prefix-foreground = ${colors.primary}
 exec = ~/.config/polybar/scripts/btc.sh eth
 click-right = /usr/bin/google-chrome-stable https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3AETHUSD
 interval=10
@@ -216,7 +217,7 @@ interval=10
 [module/btc]
 type = custom/script
 format-prefix = "󰆬 "  
-format-prefix-foreground = ${colors.primary}
+; format-prefix-foreground = ${colors.primary}
 exec = ~/.config/polybar/scripts/btc.sh btc
 click-right = /usr/bin/google-chrome-stable https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3ABTCUSD
 interval=10
@@ -251,48 +252,20 @@ expand-right = true
 format-spacing = 1
 
 label-open = "⭘"
-label-open-foreground = ${colors.primary}
-label-close = 
+label-open-foreground = ${colors.alert}
+label-close = " "
 label-close-foreground = ${colors.success}
 label-separator = 
 label-separator-foreground = ${colors.foreground}
 
 ;Powermenu
-menu-0-0 = ""
-menu-0-0-exec = menu-open-1
-menu-0-0-foreground = ${colors.urgent}
+menu-0-0 = " "
+menu-0-0-exec = systemctl reboot
+menu-0-0-foreground = ${colors.secondary}
 
-menu-0-1 = ""
-menu-0-1-exec = menu-open-2
-menu-0-1-foreground = ${colors.urgent}
-
-menu-0-2 = ""
-menu-0-2-exec = menu-open-3
-menu-0-2-foreground = ${colors.warning}
-
-;Reboot
-menu-1-0 = "Cancel "
-menu-1-0-exec = menu-open-0
-menu-1-0-foreground = ${colors.success}
-menu-1-1 = "Reboot"
-menu-1-1-exec = systemctl reboot
-menu-1-1-foreground = ${colors.urgent}
-
-;Shutdown
-menu-2-0 = "Power off"
-menu-2-0-exec = systemctl poweroff
-menu-2-0-foreground = ${colors.urgent}
-menu-2-1 = "Cancel "
-menu-2-1-exec = menu-open-0
-menu-2-1-foreground = ${colors.success}
-
-;Hibernate
-menu-3-0 = "Hibernate "
-menu-3-0-exec = systemctl hibernate
-menu-3-0-foreground = ${colors.urgent}
-menu-3-1 = "Cancel"
-menu-3-1-exec = menu-open-0
-menu-3-1-foreground = ${colors.success}
+menu-0-1 = " "
+menu-0-1-exec = systemctl poweroff
+menu-0-1-foreground = ${colors.alert}
 
 [settings]
 screenchange-reload = true
