--- a/.config/yazi/keymap.toml
+++ b/.config/yazi/keymap.toml
@@ -122,7 +122,7 @@ keymap = [
 	{ on = [ ",", "r" ], run = "sort random --reverse=no",                      desc = "Sort randomly" },
 
 	# Goto
-	{ on = [ "g", "p" ],       run = "cd ~/Projects",    desc = "Go projects" },
+	{ on = [ "g", "p" ],       run = "cd ~/projects",    desc = "Go projects" },
 	{ on = [ "g", "h" ],       run = "cd ~",             desc = "Go home" },
 	{ on = [ "g", "c" ],       run = "cd ~/.config",     desc = "Go ~/.config" },
 	{ on = [ "g", "d" ],       run = "cd ~/Downloads",   desc = "Go ~/Downloads" },
