--- a/.config/yazi/package.toml
+++ b/.config/yazi/package.toml
@@ -1,32 +1,7 @@
-[plugin]
+[[plugin.deps]]
+use = "yazi-rs/plugins:no-status"
+rev = "7c174cc"
+hash = "3e023d31f29201efdac2a6ae35fedb78"
+
+[flavor]
 deps = []
-
-[[flavor.deps]]
-use = "956MB/vscode-light-modern"
-rev = "c054b12"
-hash = "87265fb9bc07de76c0c9c916c84cc8b5"
-
-[[flavor.deps]]
-use = "956MB/vscode-dark-modern"
-rev = "cd60541"
-hash = "f970182bee3543831796629ccf078553"
-
-[[flavor.deps]]
-use = "bennyyip/gruvbox-dark"
-rev = "91fdfa7"
-hash = "f48f510e5505f5d01e79c4f8257ec5cb"
-
-[[flavor.deps]]
-use = "956MB/vscode-light-plus"
-rev = "83c8be6"
-hash = "3b7e1e867311745f1335449b9a9cdfd3"
-
-[[flavor.deps]]
-use = "muratoffalex/kanagawa-lotus"
-rev = "d84d61a"
-hash = "eef7cfa41fe51c19628d28cf453e967d"
-
-[[flavor.deps]]
-use = "gosxrgxx/flexoki-light"
-rev = "45eb0a0"
-hash = "1ee212b0799497b54c7e60bac8931e4e"
