--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -11,7 +11,7 @@ shadow-exclude = [
 #################################
 #           Fading              #
 #################################
-fading = true
+fading = false
 fade-delta = 80
 fade-out-step = 0.9
 fade-in-step = 0.9
@@ -56,9 +56,9 @@ rounded-corners-exclude = [
 blur-kern = "3x3box";
 blur-method = "dual_kawase";
 blur-strength = 10;
-blur-background = true
-blur-background-frame = true
-blur-background-fixed = true
+blur-background = false
+blur-background-frame = false
+blur-background-fixed = false
 blur-background-exclude = [
   "window_type = 'menu'",
   "window_type = 'dropdown_menu'",
@@ -85,8 +85,8 @@ use-damage = true;
 log-level = "warn";
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; }
+  tooltip = { fade = false; shadow = false; opacity = 1; focus = true; full-shadow = false; };
+  dock = { shadow = false; clip-shadow-above = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1; fade = false }
   dropdown_menu = { opacity = 1; fade = false }
