--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,7 @@ set $psst --no-startup-id
 
 title_align center
 
-# default_border normal 2
+default_border normal 1
 # default_floating_border normal 3
 # default_border pixel 3
 
@@ -24,8 +24,8 @@ for_window [all] title_window_icon off
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Jetbrains Mono NL 12
-# font pango:IosevkaTerm Nerd Font 12
+# font pango:Jetbrains Mono Nerd Font 10
+font pango:IosevkaTerm Nerd Font 16
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -53,8 +53,8 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-# bindsym $mod+Return exec alacritty
-bindsym $mod+Return exec konsole
+bindsym $mod+Return exec alacritty
+# bindsym $mod+Return exec konsole
 
 # kill focused window
 bindsym $mod+Shift+c kill
@@ -169,12 +169,12 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Finish the session?' -B 'Yes
 # lock screen
 bindsym Ctrl+$mod+Delete exec "i3lock -c 035b9e --ignore-empty-password --show-failed-attempts" 
 
-bindsym $mod+n exec "neovide" 
+# bindsym $mod+n exec "neovide" 
 bindsym $mod+Shift+Insert exec "ksnip -r" 
 bindsym $mod+Insert exec "ksnip" 
 
 # using plasma's logout screen instead of i3's
-# bindsym $mod+Shift+e exec --no-startup-id qdbus-qt5 org.kde.ksmserver /KSMServer org.kde.KSMServerInterface.logout -1 -1 -1
+# bindsym $mod+Shift+e exec --no-startup-id qdbus-qt6 org.kde.ksmserver /KSMServer org.kde.KSMServerInterface.logout -1 -1 -1
 
 ####################################################################
 #   Exec applications
@@ -193,11 +193,11 @@ exec $psst /usr/lib/pam_kwallet_init
 exec $psst  dex --autostart --environment i3
 exec $psst  xss-lock --transfer-sleep-lock -- i3lock --nofork
 # exec $psst  feh --recursive --bg-fill --randomize $HOME/Pictures/Wallpapers/ 
-exec $psst  feh --bg-center $HOME/Pictures/Wallpapers/2-cor-12-9.png
+exec $psst  feh --bg-fill $HOME/Pictures/Wallpapers/anime-gruv-light.png
 # exec $psst xsetroot -solid "#000000"
 exec_always $psst /usr/lib/polkit-kde-authentication-agent-1
 exec_always $psst autotiling
-exec_always $psst picom
+exec_always $psst picom 
 # exec_always $psst twmnd 
 exec $psst polybar i3 -r
 
@@ -226,9 +226,11 @@ for_window [instance="exodus"] floating enable
 for_window [instance="lxappearance"] floating enable
 for_window [instance="isoimagewriter"] floating enable
 for_window [instance="ksnip"] floating enable
+for_window [title="Zoiper5"] floating enable
 
 # Set Plasma dialogs and pop ups as floating so they won't get tiled
-for_window [title="Desktop @ QRect.*"] kill; floating enable; border none
+for_window [title="Desktop @ QRect.*"] kill, floating enable, border none
+# for_window [title="Desktop — Plasma"] kill; floating enable; border none
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [class="systemsettings"] floating enable
@@ -365,15 +367,26 @@ mode "$mode_redshift" {
 # client.focused          #ffa202 #cb6d02 #FFFFFF #4C7899   #ffa202
 
 # Orange
-client.focused          #ad3c03 #ad3c03 #ffffff #b8bb26   #ad3c03
-client.focused_inactive #222222 #222222 #414141 #292D2E   #222222
-client.unfocused        #222222 #222222 #414141 #292D2E   #222222
-client.urgent           #AA3941 #AA3941 #FFFFFF #AA3941   #AA3941
-client.placeholder      #0C0C0C #0C0C0C #FFFFFF #000000   #0C0C0C
+# client.focused          #ad3c03 #ad3c03 #ffffff #b8bb26   #ad3c03
+# client.focused_inactive #222222 #222222 #414141 #292D2E   #222222
+# client.unfocused        #222222 #222222 #414141 #292D2E   #222222
+# client.urgent           #AA3941 #AA3941 #FFFFFF #AA3941   #AA3941
+# client.placeholder      #0C0C0C #0C0C0C #FFFFFF #000000   #0C0C0C
 
 # VSCode
-# client.focused           #1360A5 #1360A5 #ffffff #2e9ef4 #1360A5
-# client.focused_inactive  #242D3E #313F56 #ffffff #2e9ef4 #242D3E
-# client.unfocused         #333333 #212A39 #888888 #292d2e #222222
+client.focused           #1360A5 #1360A5 #ffffff #2e9ef4 #1360A5
+client.focused_inactive  #242D3E #313F56 #ffffff #2e9ef4 #242D3E
+client.unfocused         #333333 #212A39 #888888 #292d2e #222222
 
 client.background       #FFFFFF
+
+# B&W
+# client.focused #9b8d7f #9b8d7f #000000 #9b8d7f #9b8d7f
+# client.focused #ffffff #ffffff #000000 #ffffff #ffffff
+# client.focused_inactive #222222 #222222 #ffffff #222222 #222222
+# client.unfocused #222222 #222222 #ffffff #222222 #222222
+
+# GrayScale
+# client.focused #0d0d0d #0d0d0d #ffffff #0d0d0d #0d0d0d
+# client.focused_inactive #222222 #222222 #0d0d0d #222222 #222222
+# client.unfocused #222222 #222222 #0d0d0d #222222 #222222
