--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,7 +63,7 @@ set -g @batt_icon_status_charged '󰁹'
 set -g @batt_icon_status_charging '󰂄'
 set -g @batt_icon_status_discharging '󰂃'
 set -g @batt_icon_status_attached '󰚥'
-set -g status-left " [#S] "
+set -g status-left "󰌽 [#S] "
 
 set-option -g status-right '#{battery_percentage} #{battery_icon}  %A, %b %d  %I:%M %p #h'
 # set -g status-right "#[fg=blue]#S #I:#P #[fg=green]%k:%M:%S (#(date -u | awk '{print $4}') UTC)"
