--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -22,6 +22,7 @@ background-alt = #000000
 foreground = #C5C8C6
 primary = #F0C674
 secondary = #8ABEB7
+blue = #0c81ff
 alert = #A54242
 disabled = #707880
 
@@ -56,7 +57,7 @@ separator-foreground = ${colors.disabled}
 font-0 = JetBrains Mono Nerd Font;1
 
 modules-left = xworkspaces
-modules-right = eth btc redshift vpn pulseaudio memory cpu date systray poweroff 
+modules-right = systray eth btc vpn pulseaudio memory cpu date poweroff 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -171,7 +172,7 @@ inherit = network-base
 interface-type = wireless
 label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 
-[module/eth]
+[module/cable]
 inherit = network-base
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
@@ -209,17 +210,19 @@ interval=0.5
 [module/eth]
 type = custom/script
 format-prefix = "󰡪 "  
-; format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.blue}
 exec = ~/.config/polybar/scripts/btc.sh eth
-click-right = /usr/bin/google-chrome-stable https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3AETHUSD
+; click-right = /usr/bin/google-chrome-stable https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3AETHUSD
+click-right = /usr/bin/qutebrowser --target window https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3AETHUSD
 interval=10
 
 [module/btc]
 type = custom/script
 format-prefix = "󰆬 "  
-; format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.primary}
 exec = ~/.config/polybar/scripts/btc.sh btc
-click-right = /usr/bin/google-chrome-stable https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3ABTCUSD
+; click-right = /usr/bin/google-chrome-stable https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3ABTCUSD
+click-right = /usr/bin/qutebrowser --target window https://br.tradingview.com/chart/vkxyd89t/?symbol=BITSTAMP%3ABTCUSD
 interval=10
 
 [module/output]
