--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -23,6 +23,7 @@ foreground = #C5C8C6
 primary = #F0C674
 secondary = #8ABEB7
 blue = #0c81ff
+green = #00aa00
 alert = #A54242
 disabled = #707880
 
@@ -57,7 +58,7 @@ separator-foreground = ${colors.disabled}
 font-0 = JetBrains Mono Nerd Font;1
 
 modules-left = xworkspaces
-modules-right = systray eth btc vpn pulseaudio memory cpu date poweroff 
+modules-right = systray usd eth btc vpn pulseaudio memory cpu date poweroff 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -206,6 +207,13 @@ click-left = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polyb
 scroll-up = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polybar/scripts/redshift/redshift.sh increase
 scroll-down = source ~/.config/polybar/scripts/redshift/env.sh && ~/.config/polybar/scripts/redshift/redshift.sh decrease
 interval=0.5
+
+[module/usd]
+type = custom/script
+format-prefix = "  "  
+format-prefix-foreground = ${colors.green}
+exec = ~/.config/polybar/scripts/usd.sh usd
+interval=180
 
 [module/eth]
 type = custom/script
